syntax = "proto3";

package account;

option go_package = "github.com/aligang/Gophkeeper/pkg/common/account";


message Account {
  string id = 1;
  string login = 2;
  string password = 3 ;
  string created_at = 4;
}